# FreeDiffusionToolkit

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
Matlab/: Berechnung_GM.m  Erstellung_Boxplots.m  Erstellung_Vectorfiles.m  Vektoren_symmetrisch_3Richtungen.m  Vektoren_symmetrisch_4Richtungen.m
Matlab/Auswertung_DWI/: Anleitung_DWI_Auswertung.docx  computeGeometricMean.m  createBoxplotsAndCalculateSNR.m  createMasks.m  main.m  main_trace.m  processNiftiFiles.m
Matlab/Auswertung_DWI/Skripte/: Boxplots_SNR_auto.m  Boxplots_SNR_auto_trace.m  Erstellung_Masken.m  GM_auto.m  How_to_Auswertung.docx  How_to_Auswertung_Trace.docx
freediffusiontoolkit/: __init__.py  cli.py  cmd_interface.py  free_diffusion_tool.py  free_diffusion_tools.py  siemens_tools.py  simens_tool.py  simens_tools.py  vector_ploter.py
tests/: pytest.ini  test_cmd_interface.py  test_free_diffusion_tool.py  test_siemens.py  test_vector_plotter.py
